# UniversalRobot-MetalForming

./: readme.md
metal_forming/: CMakeLists.txt  package.xml
metal_forming/config/: dsif.yaml
metal_forming/doc/move_group_python_interface/: CMakeLists.txt
metal_forming/doc/move_group_python_interface/launch/: forming.launch
metal_forming/doc/move_group_python_interface/scripts/: 3dof_vertical.py  6dof.py  6dof_horizontal.py  tf_listener.py
metal_forming/toolpaths/: cone_topContactPnts.csv  cone_topToolTipPnts.csv  funnel_topContactPnts.csv  funnel_topToolTipPnts.csv  pyramid_topContactPnts.csv  pyramid_topToolTipPnts.csv
